2009-10-25  Donal K. Fellows  <dkf@users.sf.net>

	* library/text.tcl: [Bug 1854913]: Stop <Delete> actions from ever
	deleting backwards, even when the insertion cursor is "at the end" of
	the text widget.

2009-10-24  Donal K. Fellows  <dkf@users.sf.net>

	* macosx/ttkMacOSXTheme.c (RangeToFactor, TrackElementDraw)
	(PbarElementDraw): [Bug 2883712]: Corrected scaling of progress bars
	and scales, and backported the fix for 64-bitness.

	* library/button.tcl, unix/tkUnixButton.c (TkpDisplayButton):
	[Patch 1530276]: Make -selectcolor handling work better for both
	checkbuttons and radiobuttons when they don't have indicators.

2009-10-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (CreateWidget, TextEditUndo, TextEditRedo)
	(TextEditCmd, UpdateDirtyFlag): 
	* generic/tkText.h: [Patch 1469210]: Corrected handling of marking as
	dirty when inserting after an undo from a non-dirty state.

	* library/xmfbox.tcl (MotifFDialog_FileTypes)
	(MotifFDialog_ActivateSEnt): 
	* library/tkfbox.tcl (Done, ::tk::dialog::file::): 
	* macosx/tkMacOSXDialog.c (Tk_GetOpenFileObjCmd): 
	* win/tkWinDialog.c (GetFileNameW, GetFileNameA): 
	* doc/getOpenFile.n: [Patch 2168768]: Corrected handling of the
	-typevariable option to be consistently global; it's the only way it
	can work even close to the same on all platforms.

2009-10-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Relax the runtime version requirements on Tcl
	* generic/tkMain.c:	so that Tk 8.5.8 can [load] into Tcl 8.6 (and
	* generic/tkWindow.c:	later 8.*) interps.  [Feature Request 2794032]
	* library/tk.tcl
	* unix/Makefile.in:
	* win/Makefile.in:
	* win/makefile.vc:

2009-10-10  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixRFont.c (InitFont,TkpGetFontFromAttributes,Tk_DrawChars):
	[Bug 1961455]: Draw underlines and overstrikes when using Xft for font
	rendering.

2009-10-08  Donal K. Fellows  <dkf@users.sf.net>

	* library/tkfbox.tcl (::tk::IconList_Create): [Patch 2870648]: